some equations removed, delaunay explanations added

--- a/contents.tex
+++ b/contents.tex
@@ -109,6 +109,7 @@ $\tau$             & Dämpfungszeit von Thermostaten \\
 \end{tabularx}
 \todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
 \todo[inline]{Verweise von Gleichungen durch Lokalität ersetzen}
+\todo[inline]{Kein neuer Absatz nach Gleichungen}
 
 %\printglosstex(acr)
 
