--- a/kmc.tex
+++ b/kmc.tex
@@ -1,6 +1,8 @@
 \section{Kinetic Monte Carlo-Methoden}
 \label{kmc}
 
+\todo[inline]{Mastergleichung (siehe clark\_hybrid\_1996}
+
 Kinetische Monte Carlo-Methoden (KMC) wurden ursprünglich zur Simulation von Diffusionsprozessen entwickelt, finden aber inzwischen in vielen Gebieten der Natur- und Ingenieurswissenschaften Anwendung.
 Sie beschreiben den Zeitverlauf eines Systemes als eine Abfolge von diskreten Übergängen (Ereignissen) zwischen Systemzuständen, die mit ihrer charakteristischen Rate gewichtet werden.
 Damit bieten sie sich hauptsächlich zur Simulation stochastischer Prozesse an, wobei sie auch Nichtgleichgewichtssysteme beschreiben können und somit unter anderem zur Simulation von Oberflächenreaktionen und Schichtabscheidung geeignet sind.
