--- a/literature.bib
+++ b/literature.bib
@@ -204,6 +204,17 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {ACS Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/FD73TBBV/Alvarez et al. - 1995 - Computer Simulation of .gamma.-Al2O3 Microcrystal.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/4UXJK2D7/j100051a011.html:text/html;Computer Simulation of .gamma.-Al2O3 Microcrystal - The Journal of Physical Chemistry (ACS Publications):/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/PUMG6GPS/j100051a011.html:text/html}
 }
 
+@patent{suntola_method_1977,
+	title = {Method for producing compound thin films},
+	abstract = {A method is provided for growing highly oriented compound thin films on a substrate by subjecting the substrate to the vapor of a first single element which can react with the surface at a temperature sufficiently high for the reaction to occur which forms a single atomic layer of the first single element on the surface and then subjecting the thus formed surface with a first single element atomic layer thereon to the vapor of a second single element which can react with the first single element at a temperature sufficiently high for the reaction to occur so that a single atomic layer of the second single element is formed on the surface bound to the first single element. This procedure can then be repeated alternately subjecting the surface to the vapors of the first single element then to the second single element, etc. until the compound film reaches a desired thickness. There is further provided an apparatus for carrying out this method comprising a vacuum chamber with evacuating means, a support for supporting a substrate, sources for at least two vapors of two different single elements and operating means for providing on the substrate first a single atomic layer of one of the elements, and then a single atomic layer of the other of the elements.},
+	nationality = {{UA}},
+	number = {4058430},
+	author = {Suntola, Tuomo and Antson, Jorma},
+	year = {1977},
+	note = {{US} Patent No. 4,058,430},
+	file = {Espacenet patent record:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UNCKURVJ/1977 - Method for producing compound thin films:}
+}
+
 @article{kim_energy_2011,
 	title = {Energy barriers for trimethylaluminum reaction with varying surface hydroxyl density},
 	volume = {258},
@@ -1225,4 +1236,42 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	year = {2008},
 	pages = {435--447},
 	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/696FCDUB/Hess et al. - 2008 - GROMACS 4  Algorithms for Highly Efficient, Load-.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ETVRHQWF/ct700301q.html:text/html}
+}
+
+@article{clark_hybrid_1996,
+	title = {Hybrid Monte Carlo method for off-lattice simulation of processes involving steps with widely varying rates},
+	volume = {10},
+	issn = {0894-1866},
+	url = {http://scitation.aip.org/content/aip/journal/cip/10/6/10.1063/1.168583},
+	doi = {10.1063/1.168583},
+	abstract = {A hybrid Monte Carlo simulation method consisting of kinetic and equilibrium moves is presented. The method is applicable to any system involving N different processes whose rates may vary by orders of magnitude. We show that the method easily permits the propagation of the system through macroscopic time scales by application to a study of chemical vapor deposition diamond‐film growth. The application is an off‐lattice simulation utilizing {CH}3 as the growth species on a diamond [111] surface, and incorporating a computationally expensive, many‐body potential surface. We show that, by using our method, it is possible to simulate a continuous system of several thousand atoms, with no underlying grid and with a realistic potential for times on the order of milliseconds. The growth rate of the simulated surface is consistent with experimental growth rates, and the simulation sheds light on possible morphologies during the early stages of diamond film formation. © 1996 American Institute of Physics.},
+	number = {6},
+	urldate = {2014-11-07},
+	journal = {Computers in Physics},
+	author = {Clark, M. M. and Raff, L. M. and Scott, H. L.},
+	month = nov,
+	year = {1996},
+	keywords = {{CHEMICAL} {VAPOR} {DEPOSITION}, Diamond, elemental semiconductors, Monte Carlo methods, Thin film growth},
+	pages = {584--590},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/H9NFAQFK/Clark et al. - 1996 - Hybrid Monte Carlo method for off‐lattice simulati.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2V88KIKP/1.html:text/html}
+}
+
+@incollection{biehl_off-lattice_2005,
+	series = {{NATO} Science Series},
+	title = {Off-Lattice {KMC} Simulations of Stranski-Krastanov-Like Growth},
+	copyright = {©2005 Springer},
+	isbn = {978-1-4020-3313-1, 978-1-4020-3315-5},
+	url = {http://link.springer.com/chapter/10.1007/1-4020-3315-X_6},
+	abstract = {We investigate strained heteroepitaxial crystal growth in the framework of a simplifying (1+1)-dimensional model by use of off-lattice kinetic Monte Carlo simulations. Our modified Lennard—Jones system displays the so-called Stranski—Krastanov growth mode: initial pseudomorphic growth ends by the sudden appearance of strain induced multilayer islands upon a persisting wetting layer.},
+	number = {190},
+	urldate = {2014-11-07},
+	booktitle = {Quantum Dots: Fundamentals, Applications, and Frontiers},
+	publisher = {Springer Netherlands},
+	author = {Biehl, Michael and Much, Florian},
+	editor = {Joyce, Bruce A. and Kelires, Pantelis C. and Naumovets, Anton G. and Vvedensky, Dimitri D.},
+	month = jan,
+	year = {2005},
+	keywords = {Condensed Matter, Laser Technology and Physics, Photonics, Nanotechnology, Optical and Electronic Materials, Surfaces and Interfaces, Thin Films},
+	pages = {89--102},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JKVSGAPB/Biehl and Much - 2005 - Off-Lattice KMC Simulations of Stranski-Krastanov-.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5CRH5HVI/1-4020-3315-X_6.html:text/html}
 }
