--- a/md.tex
+++ b/md.tex
@@ -104,7 +104,7 @@ Dies wird durch ein Barostat realisiert, das durch Skalierung des Simulationsrau
 Der Druck innerhalb des Systems wird dabei über die Virialgleichung ermittelt, die eigentlich für Gase gilt, aber auch für Flüssigkeiten und Feststoffe Systeme gute Ergebnisse liefert.
 
 \begin{equation}
-  PV = N k_B T + \frac{1}{d} \sum_{i=1}^N{\vec{r}_i \cdot \vec{F}_i}
+  P V = N k_B T + \frac{1}{d} \sum_{i=1}^N{\vec{r}_i \cdot \vec{F}_i}
 \end{equation}
 
 \subsubsection{Minimierung durch Konjugierte Gradienten (CG-Minimierung)}
@@ -185,7 +185,7 @@ Tabelle~\ref{tab:mdsoftware} stellt ausgewählte Vertreter moderner Molekulardyn
     \hline
     \textbf{Paket}                                                               & \textbf{Rechteinhaber}   & \textbf{Beschränkungen \& Kommentare}                            \\
     \hline
-    LAMMPS\cite{plimpton_lammps_2014,plimpton_fast_1995}                         & SANDIA                   & quelloffen, Kommandozeile, Bibliothek, eigene Potentiale möglich \\
+    LAMMPS\cite{plimpton_lammps_2014,plimpton_fast_1995}                         & Sandia                   & quelloffen, Kommandozeile, Bibliothek, eigene Potentiale möglich \\
     Materials Studio\cite{biovia_materials_2014}                                 & Accelrys                 & Grafische Oberfläche, lizenzpflichtig                            \\
     AMBER\cite{case_amber_2014,case_amber_2005}                                  & University of California & Biomoleküle, lizenzpflichtig                                     \\
     CHARMM\cite{brooks_charmm_2014,brooks_charmm:_1983,brooks_charmm:_2009}      & Accelrys                 & Proteine, lizenzpflichtig                                        \\
