--- a/metadaten.tex
+++ b/metadaten.tex
@@ -49,6 +49,6 @@
   pdfkeywords  = {\dckeywords}, %
   pdfcreator  = {pdfTeX with Hyperref and Thumbpdf}, %
   pdfproducer  = {LaTeX, hyperref, thumbpdf}, %
-  % weitere PDF-Einstellungen in hyperref.cfg
+  % weitere pdf-Einstellungen in hyperref.cfg
 }
 %%======================================================================
