--- a/titel.tex
+++ b/titel.tex
@@ -4,7 +4,7 @@
 
 % Wir setzten hier die Seitennummerierung auf Großrömisch, auch wenn diese
 % nicht auf dem "Papier" erscheint. Es dient nur der internen Zählung der
-% Seiten im hyperref-Paket, welches für die Seitennummerierung in den PDFs
+% Seiten im hyperref-Paket, welches für die Seitennummerierung in den pdfs
 % zuständig ist. Ohne diesen Trick kommen ein paar sinnlose Warnungen und
 % die Seiten-Navigation im Adobe Reader kann durcheinander geraten.
 \pagenumbering{Roman}
