--- a/contents.tex
+++ b/contents.tex
@@ -57,44 +57,57 @@
 % \acro{DFT}{Dichtefunktionaltheorie}
 %\end{acronym}
 
-\def\arraystretch{1.5}
-\begin{tabularx}{\linewidth}{lll}
+\def\arraystretch{1.3}
+\begin{longtable}{lll}
 
-ALD    & Atomic Layer Deposition             & Atomlagenabscheidung                   \\
-AFM    & Atomic Force Microscopy             & Rasterkraftmikroskopie                 \\
-CG     & Conjugated Gradients                & Konjugierte Gradienten                 \\
-CLI    & Command Line Interface              & Kommandozeile                          \\
-CVD    & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung         \\
-DFT    & Density Functional Theory           & Dichtefunktionaltheorie                \\
-EAM    & Embedded Atom Method                & Eingebettete-Atom-Methode              \\
-FEM    & Finite Element Method               & Finite-Elemente-Methoden               \\
-KMC    & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden        \\
-MD     & Molecular Dynamics                  & Molekulardynamik                       \\
-MEAM   & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode \\
-MOSFET & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor       \\
-MPI    & Message Passing Interface           & Eine Kommunikationsschnittstelle       \\
-PVD    & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung     \\
-RDF    & Radial Distribution Function        & Radiale Verteilungsfunktion            \\
-ReaxFF & Reactive Force Fields               & Reaktive Kraftfelder                   \\
-RMS    & Root Mean Square                    & Standardabweichung                     \\
-TMA    & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})     \\
+AFM       & Atomic Force Microscopy             & Rasterkraftmikroskopie                                      \\
+ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                        \\
+CG        & Conjugated Gradients                & Konjugierte Gradienten                                      \\
+CLI       & Command Line Interface              & Kommandozeile                                               \\
+CVD       & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung                              \\
+DFT       & Density Functional Theory           & Dichtefunktionaltheorie                                     \\
+EAM       & Embedded Atom Method                & Eingebettete-Atom-Methode                                   \\
+FEM       & Finite Element Method               & Finite-Elemente-Methoden                                    \\
+GMR       & Giant Magnetoresistance             & Riesenmagnetowiderstand                                     \\
+GPC       & Growth per Cycle                    & Schichtwachstum pro ALD-Zyklus                              \\
+KMC       & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden                             \\
+MMC       & Metropolis Monte Carlo              & Metropolis Monte Carlo-Methoden                             \\
+MD        & Molecular Dynamics                  & Molekulardynamik                                            \\
+MEAM      & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode                      \\
+MOSFET    & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor                            \\
+MPI       & Message Passing Interface           & Eine Kommunikationsschnittstelle                            \\
+NB        & Neighborhood                        & (atomare) Nachbarschaft                                     \\
+PVD       & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung                          \\
+RAM       & Random-Access Memory                & Arbeitsspeicher                                             \\
+RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion                                 \\
+RMS       & Root Mean Square                    & Standardabweichung                                          \\
+ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder                                        \\
+TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                          \\
+NPT       & \multicolumn{2}{l}{Großkanonisches Ensemble: Teilchenzahl, Druck und Temperatur sind konstant}    \\
+NVE       & \multicolumn{2}{l}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant}    \\
+NVT       & \multicolumn{2}{l}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant}      \\
+Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions}  \\
 
-NPT        &   \multicolumn{2}{X}{Großkanonisches Ensemble: Teilchenzahl, Druck und Temperatur sind konstant}   \\
-NVT        &   \multicolumn{2}{X}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant}     \\
-NVE        &   \multicolumn{2}{X}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant}   \\
-Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
+\end{longtable}
 
-\end{tabularx}
+\begin{comment}
+  Liste der Abkürzungen, die nicht weiter erklärt werden:
+  (Comment-Umgebung, damit sie vom Parser trotzdem erfasst werden)
+  
+  ENAS      & \multicolumn{2}{l}{Fraunhofer-Institut für Elektronische Nano-Systeme}                            \\
+  LAMMPS    & \multicolumn{2}{l}{Large-scale Atomic/Molecular Massively Parallel Simulator (MD-Bibliothek)}     \\
+  AMBER
+  GROMACS
+  TU
+  GIGANTISCHER
+  EU
+  ACCELERATE
+\end{comment}
 
-\todo[inline]{Scan auf neue Abkürzungen}
+\todo[inline]{NB vorstellen?}
+\todo[inline]{MMC: schönerer Name?}
+\todo[inline]{Beschreibung der Ensembles hier oder nur im Text?}
 \todo[inline]{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
-
-%\begin{longtable}{lll}
-%
-%MOSFET & Metall-Oxid-Halbleiter-Feldeffekttransistor & metal-oxid-semiconductor field-effect transistor \\
-%
-%\end{longtable}
-
 
 \chapter*{Symbolverzeichnis}
 \addcontentsline{toc}{chapter}{Symbolverzeichnis}
