--- a/multilayer.tex
+++ b/multilayer.tex
@@ -1,7 +1,9 @@
 \section{Multilagen-PVD}
 \label{multilayer}
 
-\todo{GMR-Systeme eingehen}
+\todo{Auf GMR/TMR-Systeme eingehen}
+\todo{Auf Röntgen-Optiken eingehen}
+\todo{Korrelierte Rauheit?}
 Mit PVD-Methoden können auch mehrlagige Schichten abgeschieden werden, die im folgenden Kapitel am Beispiel von dünnen Cu/Ni-Multilagen näher untersucht werden sollen.
 Das Kupfer-Nickel-System wurde aufgrund ähnlicher Gitterkonstanten gewählt (Ni:~\SI{3.52}{\angstrom}, Cu:~\SI{3.61}{\angstrom}), die kristallines Wachstum ermöglichen und somit Fehlstellen unterbinden.
 Durch die Ähnlichkeit zur Kupfer-PVD kann man zudem auf den dort entwickelten Prozessparametern und den untersuchten Potentialparametersätzen aufbauen.
